fix: wrong font file name referred

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -41,7 +41,7 @@
 
 @font-face {
 	font-family: southam;
-	src: url(./fonts/sign/southam/southam.otf);
+	src: url(./fonts/sign/southam/Southam.otf);
 }
 
 body {
